--- a/css/_modoDark.scss
+++ b/css/_modoDark.scss
@@ -1,214 +1,211 @@
 @mixin inputStandar {
-    background-color: rgba(255, 255, 255, 0);
-    color: rgb(0, 0, 0);
-    width: 80px;
-    margin: 8px;
-    font-size: 1em;
-    text-align: center;
-    border: .2px solid black;
-    border-bottom: 3px solid black;
-    border-radius: 2.5px;
+  background-color: rgba(255, 255, 255, 0);
+  color: rgb(0, 0, 0);
+  width: 80px;
+  margin: 8px;
+  font-size: 1em;
+  text-align: center;
+  border: 0.2px solid black;
+  border-bottom: 3px solid rgb(255, 0, 0);
+  border-radius: 2.5px;
 }
 
-@mixin botonStandar ($alto, $ancho, $fontZise) {
-    margin: auto;
-    width: $ancho;
-    height: $alto;
-    font-size: $fontZise;
-    background-color: rgb(36, 36, 36);
-    border: 2px solid rgb(22, 22, 22);
-    border-radius: 5px;
+@mixin botonStandar($alto, $ancho, $fontZise) {
+  margin: auto;
+  width: $ancho;
+  height: $alto;
+  font-size: $fontZise;
+  background-color: rgb(36, 36, 36);
+  border: 2px solid rgb(22, 22, 22);
+  border-radius: 5px;
 
-    &:hover {
-        border-radius: 5px;
-        box-shadow: 0px 0px 3px 1px #fff;
-    }
+  &:hover {
+    border-radius: 5px;
+    box-shadow: 0px 0px 3px 1px #fff;
+  }
 }
 
 @mixin containerHijo {
-    display: flex;
-    margin: 5px;
-    padding: 5px;
-    width: 450px;
-    height: 35px;
-    justify-content: space-evenly;
-    align-items: center;
-    font-size: 1rem;
+  display: flex;
+  margin: 5px;
+  padding: 5px;
+  width: 450px;
+  height: 35px;
+  justify-content: space-evenly;
+  align-items: center;
+  font-size: 1rem;
 }
 
 * {
-    font-family: 'Bungee Spice', cursive;
+  font-family: 'Bungee Spice', cursive;
 }
 
 body {
-    background-color: rgb(36 19 19);
-  }
+  background-color: rgb(36 19 19);
+}
 
 /*************Barra de navegacion******************/
 .nav__mode_dark {
-    background-color: rgba(0, 0, 0, 0.644);
- 
+  background-color: rgba(0, 0, 0, 0.644);
 
-     & ul {
-        display: flex;
-        justify-content: flex-end;
-        margin: 0px;
-        padding: 5px;
+  & ul {
+    display: flex;
+    justify-content: flex-end;
+    margin: 0px;
+    padding: 5px;
 
-        & li {
-            height: 50px;
-            width: 50px;
-            margin: 5px;
-            border-radius: 50px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-            background-color: rgb(36 19 19);
-            border: 4px solid rgb(0, 89, 255);
+    & li {
+      height: 50px;
+      width: 50px;
+      margin: 5px;
+      border-radius: 50px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      background-color: rgb(36 19 19);
+      border: 4px solid rgb(0, 89, 255);
 
-            & img {
-                width: 40px;
-            }
-        }
-
+      & img {
+        width: 40px;
+      }
     }
+  }
 }
 
 /************* Contenedor padre ******************/
 .container_dark {
-    width: 500px;
-    /***********/
-    height: 100%;
-    padding: 15px;
-    font-size: 16px;
-    margin: auto;
-    background-color: rgba(255, 255, 255, 0.014);
-    border-radius: 10px;
+  width: 500px;
+  /***********/
+  height: 100%;
+  padding: 15px;
+  font-size: 16px;
+  margin: auto;
+  background-color: rgba(255, 255, 255, 0.014);
+  border-radius: 10px;
 }
-    
 
 /*************contador******************/
 .valorActual_dark {
-    & h2 {
-        margin: auto;
-        margin-bottom: 10px;
-        padding: 5px;
-        width: 90%;
-        text-align: center;
-        font-size: 2em;
-    }
+  & h2 {
+    margin: auto;
+    margin-bottom: 10px;
+    padding: 5px;
+    width: 90%;
+    text-align: center;
+    font-size: 2em;
+  }
 
-    & h3 {
-        width: 80%;
-        margin: auto;
-        text-align: center;
-        font-size: 2em;
-    }
+  & h3 {
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    font-size: 2em;
+  }
 }
 
 /************* Section de configurations ************************/
 .configuraciones_dark {
-    width: 550px;
-    margin: auto;
+  width: 550px;
+  margin: auto;
 }
 
 /************* Notificacion Alcanzada ******************/
 .notificacionAlcanzada_dark {
-    @include containerHijo();
+  @include containerHijo();
 
-    & span {
-        font-size: 1.2em;
-    }
+  & span {
+    font-size: 1.2em;
+  }
 
-    & input {
-        @include inputStandar();
-    }
+  & input {
+    @include inputStandar();
+  }
 }
 
 .notificacionAlcanzada__titleActivada_dark {
-    color: rgba(0, 0, 0, 0.493);
-    text-decoration-line: line-through;
-    transition: 1s;
+  color: rgba(0, 0, 0, 0.493);
+  text-decoration-line: line-through;
+  transition: 1s;
 }
 
 .inputAlcanzadaActivada_dark {
-    color: rgba(0, 0, 0, 0.445);
-    background-color: rgba(255, 255, 255, 0.473);
-    text-decoration-line: line-through;
-    transition: 1s;
+  color: rgba(0, 0, 0, 0.445);
+  background-color: rgba(255, 255, 255, 0.473);
+  text-decoration-line: line-through;
+  transition: 1s;
 }
 
 /*************sonido******************/
 
 .boton__sonido_dark {
-    @include containerHijo();
+  @include containerHijo();
 
-    & h3 {
-        font-size: 1.2em;
-    }
+  & h3 {
+    font-size: 1.2em;
+  }
 
-    & span {
-        height: 30px;
-        width: 150px;
-        font-size: 20px;
-        font-weight: 700;
-        text-align: center;
-        font-size: 1.2em;
-        margin-left: 15px;
-    }
+  & span {
+    height: 30px;
+    width: 150px;
+    font-size: 20px;
+    font-weight: 700;
+    text-align: center;
+    font-size: 1.2em;
+    margin-left: 15px;
+  }
 }
 
 .desactivado_dark {
-    background-color: rgba(0, 0, 0, 0);
-    color: rgba(0, 0, 0, 0.418);
-    text-decoration-line: line-through;
-    transition: 1s;
+  background-color: rgba(0, 0, 0, 0);
+  color: rgba(0, 0, 0, 0.418);
+  text-decoration-line: line-through;
+  transition: 1s;
 }
 
 /************** Incremento del resultado *****************/
 .container__incrementarContador_dark {
-    @include containerHijo();
+  @include containerHijo();
 
-    & span {
-        font-size: 1.2em;
-    }
+  & span {
+    font-size: 1.2em;
+  }
 
-    & input {
-        @include inputStandar();
-    }
+  & input {
+    @include inputStandar();
+  }
 }
 
 /************* Cambiar resultado ******************/
 .container__cambiarResult_dark {
-    @include containerHijo();
+  @include containerHijo();
 
-    & span {
-        font-size: 1.2em;
-        margin-right: 5px;
-    }
+  & span {
+    font-size: 1.2em;
+    margin-right: 5px;
+  }
 
-    & input {
-        @include inputStandar();
-    }
+  & input {
+    @include inputStandar();
+  }
 
-    & button {
-        @include botonStandar (25px, 100px, .9em);
-        margin: 5px;
-    }
+  & button {
+    @include botonStandar(25px, 100px, 0.9em);
+    margin: 5px;
+  }
 }
 
 /************* btn aumentar y disminuir ******************/
 .container__btn_dark {
-    @include containerHijo();
+  @include containerHijo();
 
-    & button {
-        @include botonStandar (50px, 200px, 1.3em)
-    }
+  & button {
+    @include botonStandar(50px, 200px, 1.3em);
+  }
 }
 
 /*************Limpiar todo******************/
 .limpiar_dark {
-    @include botonStandar (25px, 100px, .9em);
-    margin: 20px;
+  @include botonStandar(25px, 100px, 0.9em);
+  margin: 20px;
 }
