--- a/css/style.scss
+++ b/css/style.scss
@@ -1,238 +1,247 @@
-@mixin inputStandar {
-    background-color: rgba(255, 255, 255, 0);
-    color: rgb(0, 0, 0);
-    width: 80px;
-    margin: 8px;
-    font-size: 1em;
-    text-align: center;
-    border: .2px solid black;
-    border-bottom: 3px solid black;
-    border-radius: 2.5px;
+
+:root {
+  --color-principal: rgb(248, 0, 0);
+  --color-secundario: rgb(255, 255, 255);
+  --color-contraste: rgb(255, 238, 0);
+  --color-oscuro: rgb(8, 8, 8);
+  --color-claro: rgb(54, 54, 54);
+  --color-transparente-oscuro: rgba(0, 0, 0, 0.514);
+  --color-transparente-claro: rgb(97, 97, 97);
+  --color-letra:rgb(46, 13, 13);
+
+  --letras-style:'Luckiest Guy', cursive;
 }
 
-@mixin botonStandar ($alto, $ancho, $fontZise) {
-    margin: auto;
-    width: $ancho;
-    height: $alto;
-    font-size: $fontZise;
-    background-color: rgb(36, 36, 36);
-    border: 2px solid rgb(22, 22, 22);
-    border-radius: 5px;
 
-    &:hover {
-        border-radius: 5px;
-        box-shadow: 0px 0px 3px 1px #fff;
-    }
+@mixin inputStandar {
+  background-color: rgba(255, 255, 255, 0);
+  color:var(--color-letra);
+  width: 80px;
+  margin: 8px;
+  font-size: 1em;
+  text-align: center;
+  border: 0.2px solid var(--color-oscuro);
+  border-bottom: 3px solid var(--color-oscuro);
+  border-radius: 2.5px;
+  font-family: var(--letras-style);
+  font-weight: 700;
+}
+
+@mixin botonStandar($alto, $ancho, $fontZise) {
+  margin: auto;
+  width: $ancho;
+  height: $alto;
+  color: var(--color-letra);
+  font-size: $fontZise;
+  font-weight: 700;
+  background-color: var(--color-contraste);
+  border: 2px solid var(--color-oscuro);
+  border-radius: 5px;
+  font-family: var(--letras-style);
+  cursor: pointer;
+
+  &:hover {
+    border-radius: 5px;
+    box-shadow: 0px 0px 3px 1px var(--color-claro);
+  }
 }
 
 @mixin containerHijo {
-    display: flex;
-    margin: 5px;
-    padding: 5px;
-    width: 450px;
-    height: 35px;
-    justify-content: space-evenly;
-    align-items: center;
-    font-size: 1rem;
-}
-
-* {
-    font-family: 'Bungee Spice', cursive;
+  display: flex;
+  margin: 5px;
+  padding: 5px;
+  width: 450px;
+  height: 35px;
+  justify-content: space-evenly;
+  align-items: center;
+  font-size: 1rem;
+  font-family: var(--letras-style);
+  color: var(--color-letra);
+  font-weight: 700;
 }
 
 body {
-    background-color: rgb(36 19 19);
-    margin: 0px;
-    padding: 0px;
+  background-color: var(--color-principal);
+  margin: 0px;
+  padding: 0px;
 }
 
 /*************Barra de navegacion******************/
 .nav__mode {
-    width: 100%;
-    height: 80px;
-    background-color: rgba(0, 0, 0, 0.644);
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-top: 0px;
+  width: 100%;
+  height: 80px;
+  background-color: var(--color-secundario);
+  margin-left: 0px;
+  margin-right: 0px;
+  margin-top: 0px;
 
-    &.mode__dark{
-        background-color: red;
+  & ul {
+    display: flex;
+    justify-content: center;
+    margin: 0px;
+    padding: 5px;
+
+    & li {
+      height: 55px;
+      width: 55px;
+      margin: 5px;
+      border-radius: 50px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      background-color: var(--color-secundario);
+      border: 4px solid var(--color-principal);
+     
+      &:hover{
+        box-shadow: var(--color-oscuro),;
+        background-color:var(--color-contraste);
+      }
+
+      & img {
+        width: 50px;
+      }
     }
-
-    &.mode__elegant {
-        background-color: rgb(255, 217, 0);
-        }
-    &.mode__office {
-        background-color: rgb(0, 17, 255);
-        }
-        
-    &.mode__night {
-        background-color: rgb(0, 0, 0);
-        }
-
-    &.mode__rosa {
-        background-color: rgb(255, 0, 255);
-        }
-
-    & ul {
-        display: flex;
-        justify-content: flex-end;
-        margin: 0px;
-        padding: 5px;
-
-        & li {
-            height: 50px;
-            width: 50px;
-            margin: 5px;
-            border-radius: 50px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-            background-color: rgb(36 19 19);
-            border: 4px solid rgb(0, 89, 255);
-
-            & img {
-                width: 40px;
-            }
-        }
-
-    }
+  }
 }
 
 /************* Contenedor padre ******************/
 .container {
-    width: 500px;
-    /***********/
-    height: 100%;
-    padding: 15px;
-    font-size: 16px;
-    margin: auto;
-    background-color: rgba(255, 255, 255, 0.014);
-    border-radius: 10px;
+  width: 500px;
+  /***********/
+  height: 100%;
+  padding: 15px;
+  font-size: 16px;
+  margin: auto;
+  background-color:var(--color-secundario);
+  border:5px solid var(--color-secundario);
+  border-radius: 0px 0px 20px 20px;
+  border-top: none;
 }
 
 /*************contador******************/
 .valorActual {
-    & h2 {
-        margin: auto;
-        margin-bottom: 10px;
-        padding: 5px;
-        width: 90%;
-        text-align: center;
-        font-size: 2em;
-    }
+  & h2 {
+    margin: auto;
+    margin-bottom: 10px;
+    padding: 5px;
+    width: 90%;
+    text-align: center;
+    font-size: 2em;
+    font-family: var(--letras-style);
+    color: var(--color-letra);
+  }
 
-    & h3 {
-        width: 80%;
-        margin: auto;
-        text-align: center;
-        font-size: 2em;
-    }
+  & h3 {
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    font-size: 2em;
+    font-family: var(--letras-style);
+    color: var(--color-letra);
+  }
 }
 
 /************* Section de configurations ************************/
 .configuraciones {
-    width: 550px;
-    margin: auto;
+  width: 550px;
+  margin: auto;
 }
 
 /************* Notificacion Alcanzada ******************/
 .notificacionAlcanzada {
-    @include containerHijo();
+  @include containerHijo();
 
-    & span {
-        font-size: 1.2em;
-    }
+  & span {
+    font-size: 1.2em;
+  }
 
-    & input {
-        @include inputStandar();
-    }
+  & input {
+    @include inputStandar();
+  }
 }
 
 .notificacionAlcanzada__titleActivada {
-    color: rgba(0, 0, 0, 0.493);
-    text-decoration-line: line-through;
-    transition: 1s;
+  color: var(--color-transparente-claro);
+  text-decoration-line: line-through;
+  transition: 1s;
 }
 
 .inputAlcanzadaActivada {
-    color: rgba(0, 0, 0, 0.445);
-    background-color: rgba(255, 255, 255, 0.473);
-    text-decoration-line: line-through;
-    transition: 1s;
+  color: var(--color-oscuro);
+  background-color:var(--color-transparente-claro);
+  text-decoration-line: line-through;
+  transition: 1s;
 }
 
 /*************sonido******************/
 
 .boton__sonido {
-    @include containerHijo();
+  @include containerHijo();
 
-    & h3 {
-        font-size: 1.2em;
-    }
+  & h3 {
+    font-size: 1.2em;
+  }
 
-    & span {
-        height: 30px;
-        width: 150px;
-        font-size: 20px;
-        font-weight: 700;
-        text-align: center;
-        font-size: 1.2em;
-        margin-left: 15px;
-    }
+  & span {
+    height: 30px;
+    width: 150px;
+    font-size: 20px;
+    text-align: center;
+    font-size: 1.2em;
+    margin-left: 15spx;
+  }
 }
 
 .desactivado {
-    background-color: rgba(0, 0, 0, 0);
-    color: rgba(0, 0, 0, 0.418);
+    color: var(--color-transparente-claro);
     text-decoration-line: line-through;
     transition: 1s;
 }
 
 /************** Incremento del resultado *****************/
 .container__incrementarContador {
-    @include containerHijo();
+  @include containerHijo();
 
-    & span {
-        font-size: 1.2em;
-    }
+  & span {
+    font-size: 1.2em;
+  }
 
-    & input {
-        @include inputStandar();
-    }
+  & input {
+    @include inputStandar();
+  }
 }
 
 /************* Cambiar resultado ******************/
 .container__cambiarResult {
-    @include containerHijo();
+  @include containerHijo();
 
-    & span {
-        font-size: 1.2em;
-        margin-right: 5px;
-    }
+  & span {
+    font-size: 1.2em;
+    margin-right: 5px;
+  }
 
-    & input {
-        @include inputStandar();
-    }
+  & input {
+    @include inputStandar();
+  }
 
-    & button {
-        @include botonStandar (25px, 100px, .9em);
-        margin: 5px;
-    }
+  & button {
+    @include botonStandar(25px, 100px, 0.9em);
+    margin: 5px;
+  }
 }
 
 /************* btn aumentar y disminuir ******************/
 .container__btn {
-    @include containerHijo();
+  @include containerHijo();
 
-    & button {
-        @include botonStandar (50px, 200px, 1.3em)
-    }
+  & button {
+    @include botonStandar(50px, 200px, 1.3em);
+  }
 }
 
 /*************Limpiar todo******************/
 .limpiar {
-    @include botonStandar (25px, 100px, .9em);
-    margin: 20px;
+  @include botonStandar(25px, 100px, 0.9em);
+  margin: 20px;
 }
